src/app/app.component.scss
@import '../assets/core.scss';

* {
  user-select: none;
}

svg {
  fill: currentColor;
  margin-right: 5px;
}

.container {
  display: grid;
  grid-template-columns: 1fr 1fr 2fr;
  box-sizing: border-box;
  padding: 0 20px;
  height: 100vh;
  overflow-y: unset;
  box-sizing: border-box;

  @include below($screen-sm) {
    display: flex;
    overflow-y: auto;
    padding: 20px 4% 20px 4%;
    flex-flow: column;
  }

  &-center {
    display: flex;
    justify-content: space-around;
  }
}

.post {
  max-height: 100vh;
  overflow-y: auto;
  padding-bottom: 30px;
}

.light-theme {
  transition: background 0.6s, color 0.6s ease-in-out;
  background: white;
  color: black;
}

.dark-theme {
  transition: background 0.6s, color 0.6s ease-in-out;
  background: #1d1d1d;
  color: white;
}

nav {
  padding: $space-sm;
  justify-content: space-around; 

  .title {
    font-size: 24px;
  }

  .menu-item {
    line-height: 24px;
  }
}

.theme-toggler {
  text-transform: uppercase;
  padding: 8px 10px;
  border-radius: 10px;

  span {
    margin-left: 10px;
  }

  &:hover {
    cursor: pointer;
  }
  
}

